# ZMath

./: .gitignore  LICENSE  README.md  build-RelWithDebInfo.bat  make-solution.bat  start.bat
ZMathTest/: ZMathTest.sln  ZMathTest.vcxproj  ZMathUtilsTest.cpp
include/zmath/: Vector2d.h  Vector2dUtils.h  ZMathConsts.h  ZMathExports.h  ZMathNamespace.h  ZMathUtils.h
source/: CMakeLists.txt  Vector2d.cpp
source/tests/: CMakeLists.txt  Vector2dTests.cpp  ZMathUtilsTests.cpp
source/zmath/: CMakeLists.txt
